--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@reduxjs/toolkit": "^1.9.7",
+    "react-redux": "^8.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
